Add OAuth login to Qobuz
